# phoneme-aware-curriculum-diarization-with-adaptive-merging

./: .gitignore  FILES_CREATED.txt  FIXES_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  VERIFICATION.md  pyproject.toml  requirements.txt  verify_project.sh
configs/: ablation.yaml  default.yaml
results/: evaluation_metrics.csv  evaluation_metrics.json  evaluation_report.txt  results.json  training_history.json
scripts/: evaluate.py  predict.py  train.py
src/phoneme_aware_curriculum_diarization_with_adaptive_merging/: __init__.py
src/phoneme_aware_curriculum_diarization_with_adaptive_merging/data/: __init__.py  loader.py  preprocessing.py
src/phoneme_aware_curriculum_diarization_with_adaptive_merging/evaluation/: __init__.py  analysis.py  metrics.py
src/phoneme_aware_curriculum_diarization_with_adaptive_merging/models/: __init__.py  components.py  model.py
src/phoneme_aware_curriculum_diarization_with_adaptive_merging/training/: trainer.py
src/phoneme_aware_curriculum_diarization_with_adaptive_merging/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
